small fixes and better explanation of input and output

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/question_answering.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "264c9323-7f40-40ca-93cf-db4853470206",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -47,24 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "13fa8443-17f5-4f75-8c2a-3a86d13d7911",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "b60ef68c-3556-4742-91b9-836b31699e4c",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the question-answering task we will use the [roberta model](https://huggingface.co/deepset/roberta-base-squad2).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
@@ -72,8 +72,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForQuestionAnswering\n",
@@ -82,13 +80,15 @@
     "MODEL_NAME = 'deepset/roberta-base-squad2'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'question_answering', AutoModelForQuestionAnswering))"
    ],
-   "id": "aebc949e60ff5ab"
+   "id": "aebc949e60ff5ab",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
     "We are going to check the model output given the same question but two different contexts. In neither case the context has a direct answer to the question. We expect the answer to be relevant to the context."
    ],
@@ -97,8 +97,6 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# This will be our question\n",
     "TEST_QUESTION = 'What bitumen is used for?'\n",
@@ -115,7 +113,9 @@
     "TEST_QUESTION = TEST_QUESTION.replace(\"'\", \"''\")\n",
     "TEST_CONTEXT1 = TEST_CONTEXT1.replace(\"'\", \"''\")"
    ],
-   "id": "bafb631109c697fa"
+   "id": "bafb631109c697fa",
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -128,7 +128,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "346b1b8a-b1aa-4bea-b351-83b8ee6ab7b7",
    "metadata": {
     "slideshow": {
@@ -138,7 +137,6 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -154,7 +152,9 @@
     "    )\n",
     ")\n",
     "SELECT answer, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -166,10 +166,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0787b6ac-f3db-4971-b010-0eac38bd1921",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# New context\n",
     "TEST_CONTEXT2 = \"\"\"\n",
@@ -179,11 +177,12 @@
     "\"\"\"\n",
     "\n",
     "TEST_CONTEXT2 = TEST_CONTEXT2.replace(\"'\", \"''\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "07b71013-b0ae-44c9-a299-ade8e307213c",
    "metadata": {
     "slideshow": {
@@ -193,7 +192,6 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
     "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
@@ -209,7 +207,9 @@
     "    )\n",
     ")\n",
     "SELECT answer, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -229,11 +229,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e3486cfa-53e2-47be-a445-cd6c13e654bb",
    "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
