--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/text_generation.ipynb
@@ -28,35 +28,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f22caa07-85b9-47a4-bef6-007fec786f96",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "6d11a1d4-051d-4d21-990a-660beaeb8f0c",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the text generation task we will use [Open Pretrained Transformers (OPT)](https://huggingface.co/facebook/opt-125m), a decoder-only pre-trained transformer from Facebook.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "d73c9b44-93a0-4df3-9a8e-54e182027d61",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForCausalLM\n",
@@ -64,49 +62,49 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'facebook/opt-125m'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'text_generation', AutoModelForCausalLM))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "b4efa927-aa78-4b80-9b78-25e722904217",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
     "Let's put the start of our conversation in a variable."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "aa3998b7-d886-4b0c-b0d2-92e54cc27b91",
    "metadata": {},
-   "outputs": [],
    "source": [
     "MY_TEXT = 'The bar-headed goose can fly at much'\n",
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "56498899-79f8-471e-8337-983184dcd513",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Let's put a limit on the length of text the model can generate in one call.\n",
     "# The limit is specified in the number of characters.\n",
     "MAX_LENGTH = 30"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "94a45b81-29e3-40f8-9bb8-4b7a5c6eb28c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.connections import open_pyexasol_connection\n",
     "from exasol.nb_connector.language_container_activation import get_activation_sql\n",
@@ -115,7 +113,9 @@
     "# We will have to activate the language container for each of these sessions.\n",
     "# Here we will get the activation SQL command.\n",
     "activation_sql = get_activation_sql(ai_lab_config)"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -128,7 +128,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "51b0d826-519a-4e03-9ce0-3827d0756f1d",
    "metadata": {
     "editable": true,
@@ -139,7 +138,6 @@
      "running_model_pyexasol"
     ]
    },
-   "outputs": [],
    "source": [
     "sql = f\"\"\"\n",
     "SELECT {ai_lab_config.db_schema}.TE_TEXT_GENERATION_UDF(\n",
@@ -161,7 +159,9 @@
     "\n",
     "print(MY_TEXT)\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
