--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/token_classification.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "eda8ef57-9580-415c-8fe5-622ad9f0bbda",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -47,34 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "e9193a95-2d8c-4722-ab22-10b75d2c5253",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "4dfc8b6c-ace2-4f93-8bd1-f0a8ff496413",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the token classification task we will use an [English Named Entity Recognition model](https://huggingface.co/sschet/biomedical-ner-all), trained on Maccrobat to recognize the bio-medical entities (107 entities) from a given text corpus (case reports, etc.).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "26710f2d-a245-43e8-9ff2-292a60dbb19a",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForTokenClassification\n",
@@ -82,35 +80,35 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'sschet/biomedical-ner-all'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'token_classification', AutoModelForTokenClassification))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "1581365c-eba7-4c9a-ae67-14543cb78dd2",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
     "Below is a medical report on a patient examination. In this report, we will be looking for occurrences of recognized entities, such as patient data (e.g. age), symptoms, clinical events, laboratory test results, etc."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "59ec8aee-e40f-44e8-b94b-49c374b923f4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# We will display all model output\n",
     "%config SqlMagic.displaylimit = 0"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "cc5b5ab6-4481-4b95-bcaa-86ad4da0d6e4",
    "metadata": {},
-   "outputs": [],
    "source": [
     "MY_TEXT = \"\"\"\n",
     "A 63-year-old woman with no known cardiac history presented with a sudden onset of dyspnea requiring\n",
@@ -121,7 +119,9 @@
     "\n",
     "# Make sure our texts can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -133,7 +133,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "40242348-7e1d-4a12-94c2-4d185eaa5d40",
    "metadata": {
     "slideshow": {
@@ -143,9 +142,8 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TOKEN_CLASSIFICATION_UDF(\n",
@@ -158,7 +156,9 @@
     "    )\n",
     ")\n",
     "SELECT start_pos, end_pos, word, entity, error_message FROM MODEL_OUTPUT ORDER BY start_pos, end_pos"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -185,11 +185,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "2e103aff-c848-40ab-9f96-429efe845f4e",
    "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
