--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "966a1436-fc81-47e4-a7d1-4bf138cd7c19",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -48,58 +48,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "48b6a5bb-a1a6-4945-99a8-21fbdbc39392",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "7dd67dae-b65e-4d57-8a98-2baa07c18c9a",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the translation task we will use [Facebook WMT19 English-German model](https://huggingface.co/facebook/wmt19-en-de).\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. BucketFS will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "db9dd34a-ff4e-44dc-9990-dd50f4be06d6",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForSeq2SeqLM\n",
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'facebook/wmt19-en-de'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'translation', AutoModelForSeq2SeqLM))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "f0565708-0605-4cda-b45d-592cb43207e9",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
-    "We will now translate some text from English to German."
+    "We will now use the `TE_TRANSLATION_UDF` translate some text from English to German."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "7d96886e-d7ca-4b78-b192-b38bf37f0796",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Here is the text in English\n",
     "MY_TEXT = 'We all live in a yellow submarine'\n",
@@ -111,19 +109,34 @@
     "TARGET_LANGUAGE = 'German'\n",
     "\n",
     "MAX_TRANSLATION_LENGTH = 200"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "cb8641d1-1b84-47a5-8ef0-e1f01cd8a412",
    "metadata": {},
    "source": [
-    "Let's run the translation model. We will save the result in the variable `udf_output` to support automatic testing of this notebook."
+    "The udf takes various input parameters:\n",
+    "\n",
+    "* device_id: To run on a GPU, specify the valid cuda device ID.\n",
+    "* bucketfs_conn: The BucketFS connection name.\n",
+    "* sub_dir: The directory where the model is stored in the BucketFS.\n",
+    "* model_name: The name of the model to use for prediction.\n",
+    "* text_data: The text to translate.\n",
+    "* source_language: The language of the input. Required for multilingual models only.\n",
+    "* target_language: The language of the desired output. Required for multilingual models only.\n",
+    "* max_length: The maximum total length of the translated text.\n",
+    "\n",
+    "You need to supply these parameters in the correct order. Further information can be found in the  <a href=\"https://github.com/exasol/transformers-extension/blob/main/doc/user_guide/user_guide.md\" target=\"_blank\" rel=\"noopener\">User Guide</a>.\n",
+    "\n",
+    "Let's run the translation model.\n",
+    "We will save the result in the variable `udf_output` to support automatic testing of this notebook."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "1ed978b7-e610-4989-8185-9f32e98c1649",
    "metadata": {
     "slideshow": {
@@ -133,9 +146,8 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_TRANSLATION_UDF(\n",
@@ -150,13 +162,17 @@
     "    )\n",
     ")\n",
     "SELECT translation_text, error_message FROM MODEL_OUTPUT"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "2122e3ca-cfa9-4b74-b60f-13ce1429e994",
    "metadata": {},
    "source": [
+    "The translated text can be found in the output column `TRANSLATION_TEXT`, and any error occurring while executing the udf will be saved in the `ERROR_MESSAGES` column.\n",
+    "\n",
     "The code above shows how the model works on a toy example. However, the main purpose of having a model deployed in the database is to get a quick response for a batch input. The performance gain comes from two factors - localization and parallelization. The first means that the input data never crosses the machine boundaries. The second means that multiple instances of the model are processing the data on all available nodes in parallel.\n",
     "\n",
     "Another advantage of making predictions within the database is the enhanced data security. The task of safeguarding privacy can be simplified giving the fact that the source data never leaves the database machine.\n",
