--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/masked_modelling.ipynb
@@ -28,14 +28,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "3d9a1e16-acad-4f19-b105-a0e67de4a0e6",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/access_store_ui.ipynb\n",
     "display(get_access_store_ui('../'))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -47,34 +47,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "f0cc45d2-d5ae-4afc-9f1d-251923995990",
    "metadata": {},
-   "outputs": [],
    "source": [
     "%run ../utils/jupysql_init.ipynb"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "e0ad672a-8b26-467b-8649-0bf95b1efb61",
    "metadata": {},
    "source": [
-    "## Get language model\n",
+    "## Get a language model\n",
     "\n",
     "To demonstrate the filling of a masked word task we will use a [RadBERT model](https://huggingface.co/StanfordAIMI/RadBERT) which was pre-trained on radiology reports.\n",
     "\n",
-    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
+    "We need to load the model from the Hugging Face Hub into the [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm). This could potentially be a long process, depending on the connection of the Database. Unfortunately, we cannot tell exactly when it has finished. The notebook's hourglass may not be a reliable indicator. [BucketFS](https://docs.exasol.com/db/latest/database_concepts/bucketfs/bucketfs.htm) will still be doing some work when the call issued by the notebook returns. Please wait for a few moments after that, before querying the model.\n",
     "\n",
     "You might see a warning that some weights are newly initialized and the model should be trained on a down-stream task. Please ignore this warning. For the purpose of this demonstration, it is not important, the model should still be able to produce some meaningful output."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "dede4beb-9bfe-413c-846a-a2e5c6eaa784",
    "metadata": {},
-   "outputs": [],
    "source": [
     "from exasol.nb_connector.model_installation import install_model, TransformerModel\n",
     "from transformers import AutoModelForMaskedLM\n",
@@ -82,31 +80,33 @@
     "# This is the name of the model at the Hugging Face Hub\n",
     "MODEL_NAME = 'StanfordAIMI/RadBERT'\n",
     "install_model(ai_lab_config, TransformerModel(MODEL_NAME, 'filling_mask', AutoModelForMaskedLM))"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
    "id": "9825231e-f7fa-4011-9d11-f94890f6ba7d",
    "metadata": {},
    "source": [
-    "## Use language model\n",
+    "## Use the language model\n",
     "\n",
     "Let's see if the model can fill in a masked word in the following text. This is an instruction usually given to a patient when a radiographer is doing a chest X-ray."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "dca587eb-3213-4089-a844-4bb89cf1afa3",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# This is a sentence with a masked word that will be given to the model.\n",
     "MY_TEXT = 'Take a deep [MASK] and hold it'\n",
     "\n",
     "# Make sure our text can be used in an SQL statement.\n",
     "MY_TEXT = MY_TEXT.replace(\"'\", \"''\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -119,7 +119,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "0d8288e3-0658-44a3-8fc6-92d6e1c4b3f1",
    "metadata": {
     "slideshow": {
@@ -129,9 +128,8 @@
      "running_model"
     ]
    },
-   "outputs": [],
    "source": [
-    "%%sql --save udf_output\n",
+    "%%sql\n",
     "WITH MODEL_OUTPUT AS\n",
     "(\n",
     "    SELECT TE_FILLING_MASK_UDF(\n",
@@ -144,7 +142,9 @@
     "    )\n",
     ")\n",
     "SELECT filled_text, score, error_message FROM MODEL_OUTPUT ORDER BY SCORE DESC"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -164,11 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
    "id": "00934fda-f64e-45f4-9686-c37cf34ea500",
    "metadata": {},
+   "source": [],
    "outputs": [],
-   "source": []
+   "execution_count": null
   }
  ],
  "metadata": {
